--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </a>
                 </div>
             </div>
-            <hr style="height: 0; margin: 20px 0 0 0;">
+            <button class="btn1"></button>
         </section>
 
         <!--projects-->
