--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
                         Hello, I am ProgrammerLP and I have a great passion for technology, especially IT. 
                         Over the years I have learned various programming languages, frameworks and more. 
                         I am a motivated, imaginative person and can work well in a team,
-                        which is why I can take responsibility well. I also really like learning, 
-                        creating and developing new things.
+                        which is why I can take responsibility well. I also really like creating new cool things.
                     </p>
                     
                     <h4>What am I capable of?</h4>
@@ -101,7 +100,7 @@
                     </p>
                 </div>
                 <div class="stats">
-                    <a><img onclick="openmodal('Statsitic 1', 'Use of programming languages', 'img/stat_1.png')" id="stat1" src="img/stat_1.png" alt="Statistic 1"></a>
+                    <a><img onclick="openmodal('Statsitic 1', 'Use of programming languages', 'https://github-readme-stats.vercel.app/api/top-langs/?username=programmerlp&layout=compact&theme=dark')" id="stat1" src="https://github-readme-stats.vercel.app/api/top-langs/?username=programmerlp&layout=compact&theme=dark" alt="Statistic 1"></a>
                     <a>
                         <div id="stat2">
                             <h4>Programming</h4>
