--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <li class="mobile"><a href="#about"><div class="navcontainer">About</div></a></li>
                         <li class="mobile"><a href="#projects"><div class="navcontainer">Projects</div></a></li>
                         <li class="mobile"><a href="#contact"><div class="navcontainer">Contact</div></a></li>
+			    <li><a href="/licens_privacy_info.html"><div class="navcontainer">Lizenz und Datenschutz</div></a></li>
                         <li><a href="#home"><div class="navcontainer">coming soon!</div></a></li>
                     </ul>
                 </nav>
