--- a/non_open-Source_Licens.html
+++ b/non_open-Source_Licens.html
@@ -1,4 +1,4 @@
-<p style="color: white;">
+<p style="color: white; background: black;">
     Lizenz für nicht Open-Source Software von ProgrammerLP
 
     1.) Mit dem Nutzen der Anwendung stimmen Sie automatisch der Lizenz zu. Die Lizenz gilt so lange, wie Sie die Anwendung auf Ihrem PC haben. Sobald Sie das Programm löschen oder deinstallieren, wird die Lizenz ungültig.
