--- a/licens_privacy_info.html
+++ b/licens_privacy_info.html
@@ -63,7 +63,7 @@
             <h3>Licens</h3>
             <hr>
 
-            <iframe src="non_open-Source_Licens.html" class="frame" id="lf" ></iframe>
+            <iframe src="non_open-Source_Licens.txt" class="frame" id="lf" ></iframe>
         </section>
 
         <!--about-->
