--- a/licens_privacy_info.html
+++ b/licens_privacy_info.html
@@ -71,7 +71,7 @@
             <h3>Privacy</h3>
             <hr>
 
-            <p>Es werden keinerlei Daten von Nutzern und Nutzerinnen an irgendjemanden weitergeleitet, abgefragt, verwendet oder sonst was. Alle Daten sind und bleiben lokal auf Ihrem PC gespeichert!</p>
+            <p>No data of users will be forwarded to anyone, queried, used or anything else. All data is and remains stored locally on your PC!</p>
 
         </section>
 
