--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                         <li class="mobile"><a href="#projects"><div class="navcontainer">Projects</div></a></li>
                         <li class="mobile"><a href="#contact"><div class="navcontainer">Contact</div></a></li>
 			    <li><a href="/licens_privacy_info.html"><div class="navcontainer">Lizenz und Datenschutz</div></a></li>
+			    <li><a href="https://discord.gg/PXRZm3XQDb"><div class="navcontainer">Discord</div></a></li>
+                        <li><a href="https://github.com/programmerlp"><div class="navcontainer">GitHub</div></a></li>
                         <li><a href="#home"><div class="navcontainer">coming soon!</div></a></li>
                     </ul>
                 </nav>
