--- a/licens_privacy_info.html
+++ b/licens_privacy_info.html
@@ -31,6 +31,8 @@
                         <li class="mobile"><a href="#licens"><div class="navcontainer">Licens</div></a></li>
                         <li class="mobile"><a href="#privacy"><div class="navcontainer">Privacy</div></a></li>
                         <li><a href="/index.html"><div class="navcontainer">Startseite</div></a></li>
+			    <li><a href="https://discord.gg/PXRZm3XQDb"><div class="navcontainer">Discord</div></a></li>
+                        <li><a href="https://github.com/programmerlp"><div class="navcontainer">GitHub</div></a></li>
                     </ul>
                 </nav>
 
