--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 <label>Verbrauchs Rechner</label>
                             </div>
                         </a></li>
-                        <li><a href="#home">
+                        <li><a href="/DownloadPCInfo.html">
                             <div class="projectelement">
                                 <img src="img/PCInfo.jpg" alt="test">
                                 <p>Is an app that lists the system information of your PC. Available for Windows</p>
