--- a/DownloadPCInfo.html
+++ b/DownloadPCInfo.html
@@ -84,6 +84,7 @@
                         <a href="Downloads/PCInfo.exe"><button type="button" class="dl_btn">Download v1.1.1</button></a>
                         <label>Windows 7 oder höher</label>
                     </div>
+			  <hr style="height: 0; margin: 20px 0 0 0;">
                 </div>
                   <hr style="height: 0; margin: 20px 0 0 0;">
               </div>
