--- a/DownloadPCInfo.html
+++ b/DownloadPCInfo.html
@@ -86,9 +86,8 @@
                     </div>
 			  
                 </div>
-                  <hr style="height: 0; margin: 20px 0 0 0;">
+		      <button style="height: 0; margin: 20px 0 0 0;"></button>
               </div>
-		  <hr style="height: 0; margin: 20px 0 0 0;">
           </section>
 
           <section id="about">
