--- a/DownloadPCInfo.html
+++ b/DownloadPCInfo.html
@@ -86,7 +86,7 @@
                     </div>
 			  
                 </div>
-		      <button style="height: 0; margin: 20px 0 0 0;"></button>
+		      <button class="btn1"></button>
               </div>
           </section>
 
