--- a/DownloadPCInfo.html
+++ b/DownloadPCInfo.html
@@ -91,7 +91,7 @@
           </section>
 
           <section id="about">
-              <hr style="height: 0;">
+              <button class="btn1"></button>
               <h1>Why PC Info?</h1>
 
                 <div id="one">
@@ -111,7 +111,7 @@
                           <div id="img_d">
                             <img class="a_img" src="img/PCInfo.jpg" alt="pic_1" >
                           </div>
-                          <hr style="height: 0;">
+                          <button class="btn1"></button>
                     </div>
                     <div id="I_II">
                         <div id="textd_I">
@@ -129,7 +129,7 @@
                           <div id="img_d_I">
                             <img class="a_img" src="img/PC_Info_Drives.png" alt="pic_2" >
                           </div>
-                          <hr style="height: 0; margin-top: 10px;">
+                          <button class="btn1"></button>
                     </div>
                     <div id="I_III">
                         <div id="textd">
@@ -147,7 +147,7 @@
                           <div id="img_d">
                             <img class="a_img" src="img/PCInfo.jpg" alt="pic_3" >
                           </div>
-                          <hr style="height: 0;">
+                          <button class="btn1"></button>
                     </div>
                     <hr style="height: 0;">
                 </div>
