--- a/DownloadPCInfo.html
+++ b/DownloadPCInfo.html
@@ -151,7 +151,7 @@
                     </div>
                     <hr style="height: 0;">
                 </div>
-                <hr style="height: 0; margin: 20px 0 0 0;">
+                <button class="btn1"></button>
                 <a href="Downloads/PCInfo.exe"><button type="button" class="dl_btn" style="margin-bottom: 40px;">Download v1.1.1</button></a>
           </section>
 
@@ -193,12 +193,12 @@
                             </div>
                         </a>
                     </div>
-                    <hr style="height: 0;">
+                    <button class="btn1"></button>
                 </div>
 
                     <a href="mailto:developer.programmerlp@gmx.net" onclick="openmodal('Email use','This email adress is only for reporting Bugs and share suggestions with me! Everything else is ignored!')">or via e-mail</a>
 
-                <hr style="height: 0; margin: 20px 0 0 0;">
+                <button class="btn1"></button>
             </div>
         </section>
 
