--- a/DownloadPCInfo.html
+++ b/DownloadPCInfo.html
@@ -196,7 +196,7 @@
                     <button class="btn1"></button>
                 </div>
 
-                    <a href="mailto:developer.programmerlp@gmx.net" onclick="openmodal('Email use','This email adress is only for reporting Bugs and share suggestions with me! Everything else is ignored!')">or via e-mail</a>
+                    <a style="width: 100%;" href="mailto:developer.programmerlp@gmx.net" onclick="openmodal('Email use','This email adress is only for reporting Bugs and share suggestions with me! Everything else is ignored!')">or via e-mail</a>
 
                 <button class="btn1"></button>
             </div>
