--- a/DownloadPCInfo.html
+++ b/DownloadPCInfo.html
@@ -198,7 +198,7 @@
 
                     <a style="width: 100%;" href="mailto:developer.programmerlp@gmx.net" onclick="openmodal('Email use','This email adress is only for reporting Bugs and share suggestions with me! Everything else is ignored!')">or via e-mail</a>
 
-                <button class="btn1"></button>
+                <button class="btn1" style="margin-bottom: 20px"></button>
             </div>
         </section>
 
