--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			    <li><a href="/licens_privacy_info.html"><div class="navcontainer">Lizenz und Datenschutz</div></a></li>
 			    <li><a href="https://discord.gg/PXRZm3XQDb"><div class="navcontainer">Discord</div></a></li>
                         <li><a href="https://github.com/programmerlp"><div class="navcontainer">GitHub</div></a></li>
-                        <li><a href="#home"><div class="navcontainer">coming soon!</div></a></li>
+                        <li><a href="/DownloadHub.html"><div class="navcontainer">Downloads</div></a></li>
                     </ul>
                 </nav>
 
