--- a/DownloadPCInfo.html
+++ b/DownloadPCInfo.html
@@ -32,6 +32,7 @@
                         <li class="mobile"><a href="#about"><div class="navcontainer">About</div></a></li>
                         <li class="mobile"><a href="#home"><div class="navcontainer">Download</div></a></li>
                         <li><a href="/index.html"><div class="navcontainer">Startseite</div></a></li>
+			    <li><a href="/DownloadHub.html.html"><div class="navcontainer">Download Hub</div></a></li>
                         <li><a href="https://discord.gg/PXRZm3XQDb"><div class="navcontainer">Discord</div></a></li>
                         <li><a href="https://github.com/programmerlp"><div class="navcontainer">GitHub</div></a></li>
                     </ul>
