--- a/DownloadHub.html
+++ b/DownloadHub.html
@@ -78,15 +78,15 @@
                                 <p>It is the simple game Snake, but it has features that no other Snake games have. available for all Java platforms.</p>
                                 <label>Snake</label>
                             </div>
-                        </a></li>
+                        </a></li>-->
                         <li onclick="openmodal('Finanz App','Is an app where you can enter your finances to have an overview of them. still IN DEVELOPMENT')"><a>
                             <div class="projectelement">
-                                <img src="img/FinanceApp.png" alt="test">
+                                <img src="img/PLP_FA.png" alt="test">
                                 <p>Is an app where you can enter your finances to have an overview of them. still IN DEVELOPMENT</p>
                                 <label>Finanz App</label>
                             </div>
                         </a></li>
-                        <li><a href="#home">
+                        <!--<li><a href="#home">
                             <div class="projectelement">
                                 <img src="img/KsvbR.png" alt="test">
                                 <p>Is an app where you can enter your fuel expenses to have an overview of them. available for Windows.</p>
