--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                                 <label>Snake</label>
                             </div>
                         </a></li>
-                        <li onclick="openmodal('Finanz App','Is an app where you can enter your finances to have an overview of them. still IN DEVELOPMENT')"><a>
+                        <li><a href="/DownloadFA.html">
                             <div class="projectelement">
-                                <img src="img/FinanceApp.png" alt="test">
+                                <img src="img/PLP_FA.png" alt="test">
                                 <p>Is an app where you can enter your finances to have an overview of them. still IN DEVELOPMENT</p>
                                 <label>Finanz App</label>
                             </div>
