--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <li><a href="/DownloadFA.html">
                             <div class="projectelement">
                                 <img src="img/PLP_FA.png" alt="test">
-                                <p>Is an app where you can enter your finances to have an overview of them. still IN DEVELOPMENT</p>
+                                <p>Is an app where you can enter your finances to have an overview of them.</p>
                                 <label>Finanz App</label>
                             </div>
                         </a></li>
