--- a/DownloadHub.html
+++ b/DownloadHub.html
@@ -79,10 +79,10 @@
                                 <label>Snake</label>
                             </div>
                         </a></li>-->
-                        <li onclick="openmodal('Finanz App','Is an app where you can enter your finances to have an overview of them. still IN DEVELOPMENT')"><a>
+                        <li><a href="/DownloadFA.html">
                             <div class="projectelement">
                                 <img src="img/PLP_FA.png" alt="test">
-                                <p>Is an app where you can enter your finances to have an overview of them. still IN DEVELOPMENT</p>
+                                <p>Is an app where you can enter your finances to have an overview of them.</p>
                                 <label>Finanz App</label>
                             </div>
                         </a></li>
