--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
                                 <label>Finanz App</label>
                             </div>
                         </a></li>
-                        <li><a href="#home">
+                        <li><a href="/DownloadFI.png">
                             <div class="projectelement">
                                 <img src="img/KsvbR.png" alt="test">
                                 <p>Is an app where you can enter your fuel expenses to have an overview of them. available for Windows.</p>
-                                <label>Verbrauchs Rechner</label>
+                                <label>PLP-Fuelinfo</label>
                             </div>
                         </a></li>
                         <li><a href="/DownloadPCInfo.html">
