--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </p>
                 </div>
                 <div class="stats">
-                    <a><img onclick="openmodal('Statsitic 1', 'Use of programming languages', 'https://github-readme-stats.vercel.app/api/top-langs/?username=programmerlp&layout=compact&theme=dark')" id="stat1" src="https://github-readme-stats.vercel.app/api/top-langs/?username=programmerlp&layout=compact&theme=dark" alt="Statistic 1"></a>
+                    <a><img onclick="openmodal('Statsitic 1', 'Details only concern the public repositories of the GitHub account, there are also other apps that are not uploaded to GitHub!', 'https://github-readme-stats.vercel.app/api/top-langs/?username=programmerlp&layout=compact&theme=dark')" id="stat1" src="https://github-readme-stats.vercel.app/api/top-langs/?username=programmerlp&layout=compact&theme=dark" alt="Statistic 1"></a>
                     <a>
                         <div id="stat2">
                             <h4>Programming</h4>
