--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                 <label>PC-Info</label>
                             </div>
                         </a></li>
-                        <li><a href="#home">
+                        <li><a href="https://github.com/ProgrammerLP/LottoGenerator">
                             <div class="projectelement">
                                 <img src="img/ALZWE.png" alt="test">
                                 <p>Is an app which is available for Windows and Android that generates lottery numbers.</p>
