--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <!--projects-->
         <section id="projects">
-            <h3>Projekte</h3>
+            <h3>Projects</h3>
             <hr>
 
             <div style="float: left; height: fit-content;">
@@ -198,7 +198,7 @@
         
         <!--contact-->
         <section id="contact">
-            <h3>Kontakt</h3> <hr>
+            <h3>Contact</h3> <hr>
             
             <div id="contactcontainer">
                 <h4>Do you like my work?</h4>
