--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 <label>Finanz App</label>
                             </div>
                         </a></li>
-                        <li><a href="/DownloadFI.png">
+                        <li><a href="/DownloadFI.html">
                             <div class="projectelement">
                                 <img src="img/KsvbR.png" alt="test">
                                 <p>Is an app where you can enter your fuel expenses to have an overview of them. available for Windows.</p>
